--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     .hero {
       width: 100%;
       height: 100vh;
-      background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(background.png);
+      background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("background.png");
       background-size: cover;
       background-position: center;
       padding: 10px 10%;
@@ -90,7 +90,7 @@
     <br>
     <form name="submit-to-google-sheet">
       <input type="email"name="email" class="form-control" id="email" placeholder="Enter Your Email">
-      <button type="submit"><img src="send-icon.png" alt="" width="30px"></button>
+      <button type="submit"><img src="/send-icon.png" alt="" width="30px"></button>
     </form>
     <span id="msg"></span>
   </div>
