--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <br>
     <form name="submit-to-google-sheet">
       <input type="email"name="email" class="form-control" id="email" placeholder="Enter Your Email">
-      <button type="submit"><img src="/send-icon.png" alt="" width="30px"></button>
+      <button type="submit"><img src="send-icon.png" alt="" width="30px"></button>
     </form>
     <span id="msg"></span>
   </div>
