--- a/project.html
+++ b/project.html
@@ -74,7 +74,7 @@
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Hi,am <b>Swapnil Vidhate</b> am a college
         student and I created this website only for my project. This website is not
         responsive and nor secure it is only for my project.Thank You Friends..,
-       <a href="home.html"> <h2>Go Back To Landing Page</h2></a>
+       <a href="index.html"> <h2>Go Back To Landing Page</h2></a>
         <br>
         <br>
 
