--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <div class="hero">
     <h4>Coming Soon..!</h4>
     <h1>Our Brand New<br>Website Is On It's Way..,</h1>
-    <h7>Subscribe for More details... <a href="project.html"><b>More Details.</b></a></h7>
+    <h7>Subscribe for<a href="project.html"><b>More Details.</b></a></h7>
     <br>
     <br>
     <form name="submit-to-google-sheet">
